; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_template.c_test_repo_template__initial_head_option_overrides_template_head.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_template.c_test_repo_template__initial_head_option_overrides_template_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i8* }
%struct.TYPE_9__ = type { i32 }

@GIT_REPOSITORY_INIT_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@GIT_BUF_INIT = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@GIT_REPOSITORY_INIT_MKPATH = common dso_local global i32 0, align 4
@GIT_REPOSITORY_INIT_EXTERNAL_TEMPLATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"manual\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"template\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"template/HEAD\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"foobar\0A\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"repo\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"repo/.git/HEAD\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"ref: refs/heads/manual\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_template__initial_head_option_overrides_template_head() #0 {
  %1 = alloca %struct.TYPE_8__, align 8
  %2 = alloca %struct.TYPE_9__, align 4
  %3 = bitcast %struct.TYPE_8__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %3, i8* align 8 bitcast (%struct.TYPE_8__* @GIT_REPOSITORY_INIT_OPTIONS_INIT to i8*), i64 16, i1 false)
  %4 = bitcast %struct.TYPE_9__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %5 = load i32, i32* @GIT_REPOSITORY_INIT_MKPATH, align 4
  %6 = load i32, i32* @GIT_REPOSITORY_INIT_EXTERNAL_TEMPLATE, align 4
  %7 = or i32 %5, %6
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %1, i32 0, i32 1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %10 = call i32 @setup_templates(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %11 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %12 = call i32 @setup_repo(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), %struct.TYPE_8__* %1)
  %13 = call i32 @git_futils_readbuffer(%struct.TYPE_9__* %2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %2, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0), i32 %16)
  %18 = call i32 @git_buf_dispose(%struct.TYPE_9__* %2)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @setup_templates(i8*, i32) #2

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #2

declare dso_local i32 @setup_repo(i8*, %struct.TYPE_8__*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_futils_readbuffer(%struct.TYPE_9__*, i8*) #2

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_9__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
